--- a/ParadiseApi/ParadiseApi/appsettings.json
+++ b/ParadiseApi/ParadiseApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=WIN-JDD0LPOSM6E\\SQLEXPRESS;Initial Catalog=ParadiseDB;Integrated Security=True;Encrypt=False"
+  }
 }
