--- a/ParadiseApi/ParadiseApi/ParadiseApi.csproj
+++ b/ParadiseApi/ParadiseApi/ParadiseApi.csproj
@@ -18,4 +18,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Avatars\" />
+    <Folder Include="wwwroot\Fons\" />
+    <Folder Include="wwwroot\Videos\" />
+  </ItemGroup>
+
 </Project>
