--- a/ParadiseApi/ParadiseApi/ParadiseApi.csproj
+++ b/ParadiseApi/ParadiseApi/ParadiseApi.csproj
@@ -22,6 +22,7 @@
     <Folder Include="wwwroot\Avatars\" />
     <Folder Include="wwwroot\Fons\" />
     <Folder Include="wwwroot\Videos\" />
+    <Folder Include="wwwroot\Posters\" />
   </ItemGroup>
 
 </Project>
