--- a/ParadiseApi/ParadiseApi/ParadiseApi.csproj
+++ b/ParadiseApi/ParadiseApi/ParadiseApi.csproj
@@ -21,10 +21,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\Avatars\" />
-    <Folder Include="wwwroot\Fons\" />
-    <Folder Include="wwwroot\Videos\" />
-    <Folder Include="wwwroot\Posters\" />
+    <Folder Include="wwwroot\avatars\" />
+    <Folder Include="wwwroot\fons\" />
+    <Folder Include="wwwroot\videos\" />
+    <Folder Include="wwwroot\posters\" />
   </ItemGroup>
 
 </Project>
