start configuration for Jwt token

--- a/ParadiseApi/ParadiseApi/appsettings.json
+++ b/ParadiseApi/ParadiseApi/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=WIN-JDD0LPOSM6E\\SQLEXPRESS;Initial Catalog=ParadiseDB;Integrated Security=True;Encrypt=False"
+  },
+  "JwtConfig": {
+    "Secret": "AnySecretKey"
   }
 }
