--- a/ParadiseApi/ParadiseApi/appsettings.json
+++ b/ParadiseApi/ParadiseApi/appsettings.json
@@ -10,6 +10,6 @@
     "DefaultConnection": "Data Source=WIN-JDD0LPOSM6E\\SQLEXPRESS;Initial Catalog=ParadiseDB;Integrated Security=True;Encrypt=False"
   },
   "JwtConfig": {
-    "Secret": "AnySecretKey"
+    "Secret": "ThisIsTheMostSecretKeyInTheWorld"
   }
 }
