--- a/ParadiseApi/ParadiseApi/appsettings.json
+++ b/ParadiseApi/ParadiseApi/appsettings.json
@@ -10,6 +10,7 @@
     "DefaultConnection": "Data Source=WIN-JDD0LPOSM6E\\SQLEXPRESS;Initial Catalog=ParadiseDB;Integrated Security=True;Encrypt=False"
   },
   "JwtConfig": {
-    "Secret": "ThisIsTheMostSecretKeyInTheWorld"
+    "Secret": "ThisIsTheMostSecretKeyInTheWorld",
+    "ExpireTimeFrame": "00:001:00"
   }
 }
