--- a/ParadiseApi/ParadiseApi/appsettings.json
+++ b/ParadiseApi/ParadiseApi/appsettings.json
@@ -8,7 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=WIN-JDD0LPOSM6E\\SQLEXPRESS;Initial Catalog=ParadiseDB;Integrated Security=True;Encrypt=False"
+    "DefaultConnection": "Data Source=WIN-JDD0LPOSM6E\\SQLEXPRESS;Initial Catalog=ParadiseDB;Integrated Security=True;Encrypt=False",
+    "SqlLiteConnection": "Data Source=LoggingDB.db"
   },
   "JwtConfig": {
     "Secret": "ThisIsTheMostSecretKeyInTheWorld",
