--- a/ParadiseApi/ParadiseApi/ParadiseApi.csproj
+++ b/ParadiseApi/ParadiseApi/ParadiseApi.csproj
@@ -30,4 +30,6 @@
     <Folder Include="wwwroot\posters\" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
