--- a/ParadiseApi/ParadiseApi/appsettings.json
+++ b/ParadiseApi/ParadiseApi/appsettings.json
@@ -3,7 +3,8 @@
     "LogLevel": {
       "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information",
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
   },
   "AllowedHosts": "*",
