--- a/ParadiseApi/ParadiseApi/appsettings.json
+++ b/ParadiseApi/ParadiseApi/appsettings.json
@@ -4,7 +4,7 @@
       "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information",
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
-      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
   "AllowedHosts": "*",
